# metamod-p-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs  wrapper.h
example-plugin/: Cargo.toml
example-plugin/src/: globals.rs  lib.rs  logger.rs  utils.rs
src/: lib.rs  sdk.rs
