[package]
name = "metamod-p-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]

[build-dependencies]
bindgen = "0.69.1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!