[workspace]
members = ["example-plugin"]

[package]
name = "metamod-p"
version = "0.1.0"
edition = "2021"

[dependencies]
const-default = { version = "1.0.0", features = ["std", "derive"] }

[build-dependencies]
bindgen = "0.69.1"
itertools = "0.12.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!

[features]
default = []

fallguys = []
