[package]
name = "example-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metamod-p = { version = "*", path = ".." }
byte-strings = "0.3.1"
const-default = { version = "1.0.0", features = ["std", "derive"] }
log = "0.4.20"
vc-ltl = "5.0.9"

[features]
default = []

fallguys = ["metamod-p/fallguys"]
